--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ a {
 
 /* Section PORTFOLIO --*/
 /* BUTTONS PORTFOLIO */
-.nav-projects {
+.navigation-portfolio {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -206,7 +206,7 @@ a {
   margin-bottom: 50px;
 }
 
-.button-portfolio {
+.navigation-portfolio__button {
   width: auto;
   min-height: 38px;
   min-width: 73px;
@@ -226,7 +226,7 @@ a {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button-portfolio:hover, .button-portfolio:focus {
+.navigation-portfolio__button:hover, .navigation-portfolio__button:focus {
   background-color: var(--button-color);
   color: var(--project-btn-active-text);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -242,40 +242,40 @@ a {
       flex-wrap: wrap;
 }
 
-.img-project {
-  display: block;
-  width: 100%;
-}
-
-.project-card {
-  width: calc(33.3333333333% - 2 * var(--space-card));
+.project-list__project-card {
   margin-left: var(--space-card);
   margin-bottom: var(--space-card);
 }
-.project-card:nth-child(3n+1) {
+.project-list__project-card:nth-child(3n+1) {
   margin-left: 0;
 }
-.project-card:nth-last-of-type(-n+3) {
+.project-list__project-card:nth-last-of-type(-n+3) {
   margin-bottom: 0;
 }
 
-.link-project {
+.project-card__link-card {
   display: block;
 }
-.link-project:hover, .link-project:focus {
+.project-card__link-card:hover, .project-card__link-card:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.thumb-img-project {
+.project-card__thumb-img {
   position: relative;
   text-align: left;
   overflow: hidden;
 }
 
-.description-hover {
+.project-card__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.project-card__hover-transform {
   position: absolute;
-  bottom: 0;
+  bottom: -1;
   left: 0;
   width: 100%;
   height: 100%;
@@ -296,12 +296,13 @@ a {
   color: #FFFFFF;
   background-color: rgba(33, 150, 243, 0.9);
 }
-.link-project:hover .description-hover, .link-project:focus .description-hover {
+.project-card__link-card:hover .project-card__hover-transform, .project-card__link-card:focus .project-card__hover-transform {
+  bottom: 0;
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
 
-.card-text {
+.project-card__container-text {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
@@ -311,16 +312,16 @@ a {
   border-bottom: 1px solid var(--project-card-border);
 }
 
-.project-heading {
+.project-card__title {
   font-weight: 700;
   font-size: 18px;
-  line-height: 2;
+  line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--project-card-h);
   margin-bottom: 4px;
 }
 
-.project-descriotion {
+.project-card__descriotion {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
