--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,7 +1,7 @@
 /* Section PORTFOLIO --*/
 
 /* BUTTONS PORTFOLIO */
-.nav-projects {
+.navigation-portfolio {
     display: flex;
     justify-content: center;
 
@@ -11,7 +11,7 @@
     margin-bottom: 50px;
 }
 
-.button-portfolio {
+.navigation-portfolio__button {
 width: auto;
 min-height: 38px;
 min-width: 73px;
@@ -44,13 +44,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
     flex-wrap: wrap;
 }
 
-.img-project {
-    display: block;
-    width: 100%;
-}
 
-.project-card {
-    width: calc((100%/3) - (2*var(--space-card)));
+.project-list__project-card {
+    // width: calc( (100% / 3) - (2 * var(--space-card) ));
     margin-left: var(--space-card);
     margin-bottom: var(--space-card);
 
@@ -64,7 +60,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 }
 
 
-.link-project {
+.project-card__link-card {
     display: block;
 
     &:hover,
@@ -73,16 +69,22 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
     }
 }
 
-.thumb-img-project {
+.project-card__thumb-img {
     position: relative;
 
     text-align: left;
     overflow: hidden;
 }
-
-.description-hover {
+.project-card__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.project-card__hover-transform {
     position: absolute;
-    bottom: 0;
+    // last three card is bad
+    bottom: -1;
+    // 
     left: 0;
     width: 100%;
     height: 100%;
@@ -99,30 +101,34 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
     color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
 
-    .link-project:hover &,
-    .link-project:focus & {
+    .project-card__link-card:hover &,
+    .project-card__link-card:focus & {
+        // last three card is bad
+        bottom: 0;
+        //
         transform: translateY(0%);
         }
 }
 
-.card-text {
+.project-card__container-text {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 24px;
     padding-right: 24px;
+    
 
     border-left: 1px solid var(--project-card-border);
     border-right: 1px solid var(--project-card-border);
     border-bottom: 1px solid var(--project-card-border);
 }
 
-.project-heading {
-    @include font-bold(18px, 2, 0.06em);
+.project-card__title {
+    @include font-bold(18px, 1.88, 0.06em);
     color: var(--project-card-h);
     margin-bottom: 4px;
 }
 
-.project-descriotion {
+.project-card__descriotion {
     @include font-normal(16px, 1.88, 0.03em);
     color: var(--project-card-dsk);
 }
