--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
-
 
 @import "./utils/index";
 
@@ -7,4 +5,5 @@
 
 @import "./layout/index";
 
-@import "./components/main";
+@import "./components/index";
+
