--- a/css/main.css
+++ b/css/main.css
@@ -3631,6 +3631,7 @@ a {
   position: relative;
   text-align: left;
   overflow: hidden;
+  margin: 0;
 }
 
 .project-card__img {
@@ -3641,7 +3642,7 @@ a {
 
 .project-card__hover-transform {
   position: absolute;
-  bottom: -0.1px;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -3663,7 +3664,6 @@ a {
   background-color: rgba(33, 150, 243, 0.9);
 }
 .project-card__link-card:hover .project-card__hover-transform, .project-card__link-card:focus .project-card__hover-transform {
-  bottom: 0;
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
