--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -74,6 +74,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 
     text-align: left;
     overflow: hidden;
+    margin: 0;
 }
 .project-card__img {
     display: block;
@@ -82,9 +83,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 }
 .project-card__hover-transform {
     position: absolute;
-    // last three card is bad
-    bottom: -0.1px;
-    // 
+    
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -103,9 +103,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cub
 
     .project-card__link-card:hover &,
     .project-card__link-card:focus & {
-        // last three card is bad
-        bottom: 0;
-        //
         transform: translateY(0%);
         }
 }
