--- a/sass/components/_our-work.scss
+++ b/sass/components/_our-work.scss
@@ -3,7 +3,7 @@
 }
 
 .our-work__card {
-    width: calc(100%/3) ;
+    width: calc((100% - 60px) / 3);
     position: relative;
 
     margin-left: var(--space-card);
