--- a/css/main.css
+++ b/css/main.css
@@ -3699,6 +3699,9 @@ a {
 
 .hero-section {
   padding: 200px 0;
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   background-size: 1600px auto;
   background-color: #AFB1B8;
