--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,8 +1,8 @@
 .hero-section {
 padding: 200px 0;
-width: 1600px;
-margin-left:auto;
-margin-right: auto;
+max-width: 1600px;
+
+
 
 text-align: center;
 
